<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here_to_log_in">Click here to Log In</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="logout">Logout</string>
    <string name="chest_and_triceps">Chest and Triceps</string>
    <string name="back_and_biceps">Back and Biceps</string>
    <string name="legs">Legs</string>
    <string name="_3_x_bench_press">3 x Bench Press</string>
    <string name="_3_x_incline_bench">3 x Incline Bench</string>
    <string name="_3_x_tricep_extensions">3 x Tricep Extensions</string>
    <string name="_3_x_lat_pulldown">3 x Lat Pulldown</string>
    <string name="_3_x_seated_row">3 x Seated Row</string>
    <string name="_3_x_bicep_curl">3 x Bicep Curl</string>
    <string name="_3_x_squats">3 x Squats</string>
    <string name="_3_x_leg_extensions">3 x Leg Extensions</string>
    <string name="_3_x_calf_raises">3 x Calf Raises</string>
    <string name="bench_press">Bench Press</string>
    <string name="set">Set</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="reps">Reps</string>
    <string name="incline_bench_press">Incline Bench Press</string>
    <string name="tricep_extension">Tricep Extension</string>
    <string name="cancel_workout">Cancel Workout</string>
    <string name="save_workout">Save Workout</string>
    <string name="back_and_biceps_title">Back and Biceps</string>
    <string name="lat_pulldown">Lat Pulldown</string>
    <string name="seated_row">Seated Row</string>
    <string name="bicep_curl">Bicep Curl</string>
    <string name="select_workout_type">Select Workout Type:</string>
    <string name="squats">Squats</string>
    <string name="leg_extensions">Leg Extensions</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="weight_and_reps_template">kg x </string>
    <string name="leaderboard"> kg</string>
    <string name="personal_bests">Personal Bests</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="home">Home</string>

</resources>