<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".SignUpActivity">


    <TextView
        android:text="@string/sign_up"

        android:textSize="45sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/primary"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:textColorHint="@color/primary"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:textColorHint="@color/primary"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signup_btn"

        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_field_border"
        app:backgroundTint="@null"/>

    <TextView
        android:id="@+id/login_Redirect"

        android:textColor="@color/primary"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/click_here_to_log_in"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>