<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPbs"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/pushpbsection">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chest_and_triceps"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/primary"
            android:layout_marginBottom="10dp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/bench_press"
                android:textSize="20sp"
                android:textStyle="bold"
                >
            </TextView>
            <TextView
                android:id="@+id/textbenchpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textbenchpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/incline_bench_press"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textinclinebenchpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textinclinebenchpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tricep_extension"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/texttriceppb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/texttriceppbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/pullpbsection"
        android:layout_below="@+id/pushpbsection"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_and_biceps"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/primary"
            android:layout_marginBottom="10dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lat_pulldown"
                android:textSize="20sp"
                android:textStyle="bold"
                >
            </TextView>
            <TextView
                android:id="@+id/textlatpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textlatpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/seated_row"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textrowpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textrowpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/bicep_curl"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textbiceppb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textbiceppbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/pullpbsection"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legs"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/primary"
            android:layout_marginBottom="10dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/squats"
                android:textSize="20sp"
                android:textStyle="bold"
                >
            </TextView>
            <TextView
                android:id="@+id/textsquatpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textsquatpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/leg_extensions"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textextensionpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textextensionpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/calf_raises"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textcalfpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/textcalfpbreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <Button
            android:id="@+id/home_btn"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/home"
            android:textColor="@color/primary"
            android:background="@drawable/input_field_border"
            app:backgroundTint="@null"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"/>
    </LinearLayout>




</RelativeLayout>