<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leaderboard"
    android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/pushLeaderboard">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chest_and_triceps"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/primary"
                android:layout_marginBottom="10dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bench_press"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    >
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/bench1stemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/first"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/bench1stweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/first"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/bench2ndemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/second"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/bench2ndweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/second"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/bench3rdemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/third"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/bench3rdweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/third"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/incline_bench_press"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/incline1stemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/calf_raises"
                        android:textColor="@color/first"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/incline1stweight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/first"
                        android:textSize="20sp"
                        android:text="@string/calf_raises"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/incline2ndemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/second"
                        android:textSize="20sp"
                        android:text="@string/calf_raises"
                        android:layout_marginEnd="15dp"
                        android:textStyle="bold">
                    </TextView>
                    <TextView
                        android:id="@+id/incline2ndweight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/second"
                        android:textSize="20sp"
                        android:text="@string/calf_raises"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/incline3rdemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/third"
                        android:textSize="20sp"
                        android:text="@string/calf_raises"
                        android:layout_marginEnd="15dp"
                        android:textStyle="bold">
                    </TextView>
                    <TextView
                        android:id="@+id/incline3rdweight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/third"
                        android:textSize="20sp"
                        android:text="@string/calf_raises"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tricep_extension"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tricep1stemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/first"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/tricep1stweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/first"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tricep2ndemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/second"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/tricep2ndweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/second"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tricep3rdemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/third"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:layout_marginEnd="15dp"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:id="@+id/tricep3rdweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/third"
                            android:textSize="20sp"
                            android:text="@string/calf_raises"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</ScrollView>